--- a/src/containers/UploadFile/UploadFile.scss
+++ b/src/containers/UploadFile/UploadFile.scss
@@ -12,6 +12,7 @@
     .uploadFile__form{
         display: flex;
         align-items: center;
+        width: 100%;
         *{
             color: $white;
         }
